// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Ring renders a complete ring 1`] = `
<div
  className="slds-progress-ring slds-progress-ring_complete"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={100}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx="0"
        cy="0"
        id="slds-progress-ring-path-5"
        r={1}
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
</div>
`;

exports[`Progress Ring renders a filling active step ring 1`] = `
<div
  className="slds-progress-ring slds-progress-ring_active-step"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={20}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 0 0.31 -0.95 L 0 0"
        id="slds-progress-ring-path-7"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
  <div
    className="slds-progress-ring__progress-head"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx={0.217}
        cy={-0.6649999999999999}
        id="slds-progress-ring-path-7"
        r={0.2}
      />
    </svg>
  </div>
</div>
`;

exports[`Progress Ring renders a partially draiend ring with error 1`] = `
<div
  className="slds-progress-ring slds-progress-ring_expired"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={20}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 1 0.31 0.95 L 0 0"
        id="slds-progress-ring-path-4"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
  <div
    className="slds-progress-ring__progress-head"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx={0.217}
        cy={0.6649999999999999}
        id="slds-progress-ring-path-4"
        r={0.2}
      />
    </svg>
  </div>
</div>
`;

exports[`Progress Ring renders a partially drained ring 1`] = `
<div
  className="slds-progress-ring"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={20}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 1 0.31 0.95 L 0 0"
        id="slds-progress-ring-path-1"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
  <div
    className="slds-progress-ring__progress-head"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx={0.217}
        cy={0.6649999999999999}
        id="slds-progress-ring-path-1"
        r={0.2}
      />
    </svg>
  </div>
</div>
`;

exports[`Progress Ring renders a partially filled ring 1`] = `
<div
  className="slds-progress-ring"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={20}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 0 0.31 -0.95 L 0 0"
        id="slds-progress-ring-path-2"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
  <div
    className="slds-progress-ring__progress-head"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx={0.217}
        cy={-0.6649999999999999}
        id="slds-progress-ring-path-2"
        r={0.2}
      />
    </svg>
  </div>
</div>
`;

exports[`Progress Ring renders a partially filled ring with warning 1`] = `
<div
  className="slds-progress-ring slds-progress-ring_warning"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={20}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 0 0.31 -0.95 L 0 0"
        id="slds-progress-ring-path-3"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
  <div
    className="slds-progress-ring__progress-head"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <circle
        className="slds-progress-ring__path"
        cx={0.217}
        cy={-0.6649999999999999}
        id="slds-progress-ring-path-3"
        r={0.2}
      />
    </svg>
  </div>
</div>
`;

exports[`Progress Ring renders an empty ring 1`] = `
<div
  className="slds-progress-ring"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={0}
    className="slds-progress-ring__progress"
    role="progressbar"
  >
    <svg
      viewBox="-1 -1 2 2"
    >
      <path
        className="slds-progress-ring__path"
        d="M 1 0 A 1 1 0 0 0 1.00 -0.00 L 0 0"
        id="slds-progress-ring-path-6"
      />
    </svg>
  </div>
  <div
    className="slds-progress-ring__content"
  />
</div>
`;
